force-app/main/default/objects/Critical_Dates__c/Critical_Dates__c.object-meta.xml
<CustomObject>
    <label>Critical Dates</label>
    <nameField>
        <displayFormat>CD-{00000}</displayFormat>
        <label>Critical Dates Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Critical Dates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>