force-app/main/default/objects/Critical_Dates__c/fields/Advance_Notice__c.field-meta.xml
<CustomField>
    <fullName>Advance_Notice__c</fullName>
    <label>Advance Notice</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Date</fullName>
            </value>
            <value>
                <fullName>1 month</fullName>
            </value>
            <value>
                <fullName>3 months</fullName>
            </value>
            <value>
                <fullName>6 months</fullName>
            </value>
            <value>
                <fullName>9 months</fullName>
            </value>
            <value>
                <fullName>12 months</fullName>
            </value>
            <value>
                <fullName>18 months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>