force-app/main/default/objects/Critical_Dates__c/fields/Critical_Date__c.field-meta.xml
<CustomField>
    <fullName>Critical_Date__c</fullName>
    <label>Critical Date</label>
    <type>Date</type>
</CustomField>