force-app/main/default/objects/Critical_Dates__c/fields/Critical_Date_Type__c.field-meta.xml
<CustomField>
    <fullName>Critical_Date_Type__c</fullName>
    <label>Critical Date Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lease Commencement Date</fullName>
            </value>
            <value>
                <fullName>Lease Expiration Date</fullName>
            </value>
            <value>
                <fullName>Rent Abatement</fullName>
            </value>
            <value>
                <fullName>Rent Increase</fullName>
            </value>
            <value>
                <fullName>TI to Free Rent Conversion</fullName>
            </value>
            <value>
                <fullName>Auto-Renewal Notice Date</fullName>
            </value>
            <value>
                <fullName>Security Deposit Burn Off</fullName>
            </value>
            <value>
                <fullName>Right to Terminate Effective Date</fullName>
            </value>
            <value>
                <fullName>Right to Terminate Notice Opening</fullName>
            </value>
            <value>
                <fullName>Right to Terminate Notice Closing</fullName>
            </value>
            <value>
                <fullName>Right to Renew Opening</fullName>
            </value>
            <value>
                <fullName>Right to Renew Closing</fullName>
            </value>
            <value>
                <fullName>Security Deposit Return</fullName>
            </value>
            <value>
                <fullName>COI Expiration</fullName>
            </value>
            <value>
                <fullName>Notice to Purchase Furniture Due</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>